css/menustyle.css
@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Open+Sans&display=swap');

body {
    font-family: 'Open Sans', sans-serif;
    margin: 0;
    padding-bottom: 30px;
}

/*todo optimera detta.. wrapa tex när man visar långa rubriker. */
h1, h2, h3, h4, figcaption, p, li{
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

ul li {
    line-height: 175%;
    font-size: 18px;
}

li{
    margin: 0 50px;
}

header h1 {
    font-family: 'Merriweather', serif;
    text-align: center;
    font-size: 40px;
    margin: 20px auto;
}

.header-line {
    background: linear-gradient(90deg, #A0A603, #BF5B04);
    height: 20px;
    width: 100%;
    margin-bottom: 50px;
}

article#week-grid {
    display: grid;
    grid-template-columns: repeat(7, calc(40% - 40px));
    overflow-x: auto;
    grid-template-rows: 100px 3fr;
    grid-gap: 30px;
    border: 2px solid #A0A603;
    border-right: none;
    justify-items: center;
    margin-bottom: 30px;
    padding: 10px 30px;
}

#week-grid figcaption{
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

main {
    margin: 0 10px;
}

#user-interactivity {
    display: block;
    margin-top: 50px;
    text-align: center;
}

#hide-recipes, #hide-shoppinglist{
    display: none;
}

#recipe-list ul li:first-child {
    margin-top: 5px;
}


article#optionButtons button {
    margin-bottom: 40px;
}

#week-grid figure {
    display: block;
    width: 100%;
    height: auto;
    text-align: center;
    padding: 5px;
    box-sizing: border-box;
}

#week-grid .hover-size {
    transform: scale(1.03);
}

.recipe-img {
    display: block;
    margin: 0 auto 20px;
    max-width: 100%;
    height: auto;
}

button {
    width: 90%;
    display: block;
    margin: 30px auto;
    height: 65px;
}

form button, input[type=submit] {
    display: inline-block;
    width: 40%;
}

button, input[type=submit] {
    font-size: 20px;
    padding: 13px;
    background-color: #FFF;
    border: 2px solid black;
    transition: 0.2s;
    margin-right: 20px;
    height: 65px;

}

input[type=submit] {
    margin-top: 20px;
    border: 3px solid #A0A603;
}

button:hover, input[type=submit]:hover {
    background-color: #D9D166;
    border-color: #D9D166;
    transition: 0.2s;
}

label{
    font-size: 20px;
}

input{
    width: 60%;
    height: 40px;
    font-size: 18px;
}

select{
    width: 50%;
    font-size: 16px;
    height: 60px;
    text-align-last: center;
}

input, select {
    padding: 10px 15px;
    box-sizing: border-box;
}

input:focus, select:focus, button:focus {
    outline: none;
    border-color: #F2CEAE;
}

.dualOptions {
    color: lightgray;
    border-color: lightgray;
}

.dualOptions:hover {
    background-color: white;
    border-color: lightgray;
}

#recipe-header h3 {
    display: inline;
}

#recipe-list #header {
    margin-top: 10px;
}

#recipe-parent-list {
    margin-top: 30px;
}

#recipes-loop {
    margin-top: 20px;
}

#ingredient-list:first-of-type {
    margin-top: 20px;
}

input.delete {
    max-width: 12%;
    height: auto;
    vertical-align: bottom;
    margin-left: 7px;
}

#recipe-info input.delete {
    vertical-align: middle;
    padding-bottom: 20px;
}

#recipe-header{
    font-size: 22px;
}

#recipe-info input.delete{
    max-width: 60px;
}

#reactive-recipe h2{
    font-size: 22px;
}

#new-weekday h4 {
    font-size: 20px;
    margin-bottom: 10px;
}

#new-weekday select {
    margin-right: 18px;
    display: inline-block;
}

#new-weekday button {
    width: 100px;
    margin: 5px 0 20px;
    display: inline-block;
}

article#shopping-list ul {
    list-style-type: none;
}

#recipe-list h3:hover {
    text-decoration: underline;
}

#recipes-loop > *{
    vertical-align: text-top;
}

#recipe-info{
    display: inline-block;
}

#recipe-list #no-recipes-header {
    margin-top: 30px;
}

.active-title h3 {
    color: #A0A603;
}

#shopping-list ul {
    margin: 0 auto;
}

#shopping-list li {
    line-height: 200%;
}

#shopping-list img {
    vertical-align: middle;
    margin-left: 4px;
    padding-bottom: 5px;
}

.greenMarked {
    color: #A0A603;
}


@media screen and (min-width: 1024px) {

    ul{
        list-style-position: outside;
    }

    li{
        margin: 0 0;
    }

    article#week-grid {
        display: grid;
        grid-template-columns: repeat(7, minmax(0, 1fr));
        grid-template-rows: 70px 200px;
        grid-gap: 30px;
        border: 2px solid #A0A603;
        justify-items: center;
        margin-bottom: 30px;
        padding: 10px 30px;
    }

    main {
        margin: 0 180px;
    }

    #user-interactivity {
        display: grid;
        grid-template-columns: repeat(3, minmax(0, 1fr));
        margin-top: 40px;
        text-align: left;
    }

    #hide-recipes, #hide-shoppinglist{
        display: block;
        margin: 0 0;
    }

    button {
        display: inline;
        width: 250px;
        margin: 2px auto;
    }

    button, input[type=submit] {
        font-size: 16px;
        padding: 13px;
        height: 48px;
    }

    form button, input[type=submit] {
        display: inline;
    }

    input, select {
        padding: 5px;
    }

    select{
        width: 120px;
        font-size: 16px;
        height: 40px;
        text-align-last: left;
    }

    input.delete {
        max-width: 35px;
        vertical-align: bottom;
        margin-left: 10px;
    }

    #recipe-info input.delete {
        vertical-align: middle;
        padding-bottom: 14px;
        max-width: 35px;
    }

    #recipes-loop{
        list-style-position: outside;
    }

    #recipe-info{
        display: inline-block;
    }

}

